<resources>
    <string name="app_name">Palermo2Go</string>
    <string name="email_o_numero_di_telefono">Email o numero di telefono</string>
    <string name="accedi">Accedi</string>
    <string name="inserisci_le_credenziali_per_accedere">Inserisci le credenziali per accedere</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrati">Registrati</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conferma_email">Conferma Email</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="google_maps_key">AIzaSyD8DbYiTFS22dgPDjNIwR26cOuOXtpt5cc</string>
    <string name="prenota_ora">Prenota ora</string>
    <string name="menu">Menu</string>
    <string name="prenotazioni_in_corso">Prenotazioni in corso</string>
    <string name="prenotazioni_passate">Prenotazioni passate</string>
    <string name="pagamenti">Pagamenti</string>
    <string name="carrello">Carrello</string>
    <string name="openmenu">openMenu</string>
    <string name="todo">TODO</string>
    <string name="attiva">Attiva</string>
    <string name="disdici">Disdici</string>
    <string name="parcheggia">Parcheggia</string>
    <string name="nessuna_prenotazione_in_corso">Nessuna prenotazione in corso</string>
    <string name="inserisci_indrizzo">Inserisci indrizzo</string>
    <string name="attivando_la_consegna_express_il_mezzo_viene_cosegnato_dove_preferisci_pagando_un_piccolo_supplemento">Attivando la consegna Express, il mezzo viene cosegnato dove preferisci, pagando un piccolo supplemento</string>
    <string name="avanti">Avanti</string>
    <string name="annulla">Annulla</string>
    <string name="inserisci_data">Inserisci data</string>
    <string name="inserisci_ora_di_ritiro">Inserisci ora di ritiro</string>
    <string name="risultati_trovati_per_la_tua_prenotazione">Risultati trovati per la tua prenotazione</string>
    <string name="vuoi_un_autista">Vuoi un autista</string>
    <string name="inserisci_per_quante_ore_vuoi_penotare">Inserisci per quanti minuti vuoi prenotare</string>
    <string name="prenota">Prenota</string>
    <string name="inserisci_via_di_destinazione">Inserisci via di destinazione</string>
    <string name="carta">Registra carta</string>
    <string name="numero_della_cart">Numero della carta</string>
    <string name="scadenza">Scadenza</string>
    <string name="registra_carta">Registra carta</string>
    <string name="cvv">CVV</string>
    <string name="elimina_carta">Elimina carta</string>
    <string name="esci_dalla_schermata">Esci dalla schermata</string>
    <string name="viewCarta">Carta</string>
    <string name="finisci_corsa">Finisci corsa</string>
    <string name="carica_patente">Carica patente</string>
    <string name="paga">paga</string>
    <string name="chiudi">Chiudi</string>
    <string name="partenza_da">Partenza da :</string>
    <string name="consegna">Consegna :</string>
    <string name="cambia_partenza_e_ora">Cambia partenza e ora</string>
    <string name="partenza">Partenza :</string>
    <string name="arrivo">Arrivo:</string>
    <string name="data">Data:</string>
    <string name="numero_di_telefono">Numero di telefono</string>
    <string name="cambia_destinazione">Cambia destinazione</string>
    <string name="consegna_prevista">Consegna prevista:</string>
    <string name="cambia_password">Cambia password</string>
    <string name="vecchia_password">Vecchia password</string>
    <string name="nuova_password">Nuova password</string>

</resources>