<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:padding="10dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    app:cardCornerRadius="20dp"
    android:layout_width="wrap_content"
    android:background="@color/trans"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:background="@color/lightTrasparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/carta"
            android:textColor="@color/primary"
            android:textSize="21sp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="30dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cartNumber"
            android:hint="@string/numero_della_cart"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_margin="20dp"
            android:layout_below="@id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                app:cardCornerRadius="30dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cartExpire"
                    android:hint="@string/scadenza"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                app:cardCornerRadius="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cvv"
                    android:hint="@string/cvv"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />

            </androidx.cardview.widget.CardView>



        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/registerButton"
            android:layout_margin="10dp"
            app:cardCornerRadius="50dp"
            app:cardBackgroundColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            >


            <TextView

                android:textColor="@color/background"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/registra_carta"
                />

        </androidx.cardview.widget.CardView>



    </RelativeLayout>

</androidx.cardview.widget.CardView>