<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="30dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@color/primary"
                />

            <LinearLayout
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_below="@id/image"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



              <TextView
                  android:id="@+id/start"
                  android:textSize="10sp"
                  android:layout_marginStart="5dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/partenza_da"/>

                <TextView
                    android:id="@+id/arrive"
                    android:textSize="10sp"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arrivo"/>

                <TextView
                    android:id="@+id/date"
                    android:textSize="10sp"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data"/>


            </LinearLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>