<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.cardview.widget.CardView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/white"
                android:background="@color/background"
                android:hint="@string/inserisci_per_quante_ore_vuoi_penotare"
                android:textColor="@color/primary"
                android:textSize="14sp"
                android:inputType="number"
                android:gravity="center"
                />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/destinazioneText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/white"
                android:background="@color/background"
                android:hint="@string/inserisci_via_di_destinazione"
                android:textColor="@color/primary"
                android:textSize="14sp"
                android:gravity="center"
                />

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/prenotaButton"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:text="@string/prenota"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


</RelativeLayout>